Modif database default

--- a/.ini
+++ b/.ini
@@ -4,4 +4,4 @@ DB_NAME=gastro_db
 DB_USER=admin
 DB_PASSWORD=root
 DB_HOST=localhost
-ALLOWED_HOSTS=.localhost, .herokuapp.com
+ALLOWED_HOSTS=.127.0.0.1, .herokuapp.com
