--- a/.ini
+++ b/.ini
@@ -3,5 +3,5 @@ DEBUG=True
 DB_NAME=gastro_db
 DB_USER=admin
 DB_PASSWORD=root
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 ALLOWED_HOSTS=.127.0.0.1, .herokuapp.com
