--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ django-storages==1.6.3
 django-threadedcomments==1.1
 django-tinymce==2.6.0
 django-widget-tweaks==1.4.1
+django-taggit==0.22.2
 gunicorn==19.7.1
 idna==2.5
 oauthlib==2.0.2
