--- a/gastronomie/.env
+++ b/gastronomie/.env
@@ -1,8 +1,8 @@
 
 SECRET_KEY=#l3#%g^k@g9wjtsnzkwce-7uy92_%1x=)gt%t_o_+fd!7%g($3
 DEBUG=True
-DB_NAME=gastro_db
-DB_USER=admin
-DB_PASSWORD=root
+DB_NAME=cookit_db
+DB_USER=cookit_user
+DB_PASSWORD=cookit_user
 DB_HOST=localhost
 ALLOWED_HOSTS=.localhost, .herokuapp.com
