Ajout d'une app search

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-countries==4.6.1
 django-datetime-widget==0.9.3
 django-datetimepicker==3.14
 django-embed-video==1.1.2
+django-filter==1.1.0
 django-form-utils==1.0.3
 django-likes==1.11
 django-messages-to-bootstrap-notify==0.2.6
