--- a/requirements.txt
+++ b/requirements.txt
@@ -52,3 +52,68 @@ six==1.10.0
 sorl-thumbnail==12.4.1
 urllib3==1.21.1
 whitenoise==3.3.0
+appdirs==1.4.3
+boto==2.47.0
+certifi==2017.4.17
+chardet==3.0.4
+configparser==3.5.0
+defusedxml==0.5.0
+dj-database-url==0.4.2
+Django==1.10.7
+django-addanother==2.0.0
+django-allauth==0.32.0
+django-appconf==1.0.2
+django-bootstrap-modal-forms==1.3.1
+django-bootstrap3-datetimepicker==2.2.3
+django-braces==1.11.0
+django-ckeditor==5.2.2
+django-clear-cache==0.3
+django-contrib-comments==1.8.0
+django-countries==4.6.1
+django-datetime-widget==0.9.3
+django-datetimepicker==3.14
+django-embed-video==1.1.2
+django-filter==1.1.0
+django-form-utils==1.0.3
+django-jsonfield==1.0.1
+django-likes==1.11
+django-messages-to-bootstrap-notify==0.2.6
+django-model-utils==3.0.0
+django-newsletter==0.7
+django-notify-x==0.1.9
+django-registration==2.2
+django-secretballot==0.7.0
+django-select2==6.3.1
+django-social-share==1.1.2
+django-star-ratings==0.5.6
+django-stdimage==2.4.1
+django-storages==1.6.3
+django-taggit==0.22.2
+django-threadedcomments==1.1
+django-tinymce==2.6.0
+django-widget-tweaks==1.4.1
+gunicorn==19.7.1
+idna==2.5
+ldif3==3.1.1
+oauthlib==2.0.2
+olefile==0.44
+packaging==16.8
+Pillow==4.1.1
+progressbar2==3.30.2
+psycopg2==2.7.1
+pyparsing==2.2.0
+python-card-me==0.9.3
+python-dateutil==2.7.5
+python-decouple==3.1
+python-utils==2.1.0
+python3-openid==3.1.0
+pytz==2018.3
+redis==2.10.5
+requests==2.17.3
+requests-oauthlib==0.8.0
+six==1.10.0
+sorl-thumbnail==12.4.1
+surlex==0.2.0
+unicodecsv==0.14.1
+urllib3==1.21.1
+whitenoise==3.3.0
